added to do app

--- a/app/templates/_pages/main.hbs
+++ b/app/templates/_pages/main.hbs
@@ -1,2 +1,11 @@
 {{!< default}}
-<div id="root">{{{content}}}</div>
+<div id="root">
+	<h1>Home Page</h1>
+	<nav>
+	 	<ul> 
+	 		<li>
+	 			<a href="/pages/todo.html">Todo App</a>
+	 		</li>
+	 	</ul>	
+	</nav>
+</div>
