--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -4,6 +4,9 @@
 @import 'defaults/base-global.scss';
 @import 'defaults/typography.scss';
 @import 'lib/bootstrap.min.css';
+@import 'pages/todo.css';
+@import 'pages/multimedia.css';
+
 
 /********************************************************** Viewport */
 
