--- a/app/templates/_pages/main.hbs
+++ b/app/templates/_pages/main.hbs
@@ -6,6 +6,9 @@
 	 		<li>
 	 			<a href="/pages/todo.html">Todo App</a>
 	 		</li>
+	 		<li>
+	 			<a href="/pages/multimedia.html">Multimedia</a>
+	 		</li>
 	 	</ul>	
 	</nav>
 </div>
