--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -6,7 +6,7 @@
 @import 'lib/bootstrap.min.css';
 @import 'pages/todo.css';
 @import 'pages/multimedia.css';
-
+@import 'pages/newProject.css';
 
 /********************************************************** Viewport */
 
