--- a/app/templates/_pages/main.hbs
+++ b/app/templates/_pages/main.hbs
@@ -9,6 +9,9 @@
 	 		<li>
 	 			<a href="/pages/multimedia.html">Multimedia</a>
 	 		</li>
+	 		<li>
+	 			<a href="/pages/newProject.html">D3</a>
+	 		</li>
 	 	</ul>	
 	</nav>
 </div>
