--- a/app/templates/_pages/main.hbs
+++ b/app/templates/_pages/main.hbs
@@ -12,6 +12,9 @@
 	 		<li>
 	 			<a href="/pages/newProject.html">D3</a>
 	 		</li>
+	 		<li>
+	 			<a href="/pages/canvas.html">Canvas Example</a>
+	 		</li>
 	 	</ul>	
 	</nav>
 </div>
