--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -7,6 +7,9 @@
 @import 'pages/todo.css';
 @import 'pages/multimedia.css';
 @import 'pages/newProject.css';
+@import 'pages/canvas.css';
+
+
 
 /********************************************************** Viewport */
 
