add homepage Css

--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -4,10 +4,11 @@
 @import 'defaults/base-global.scss';
 @import 'defaults/typography.scss';
 @import 'lib/bootstrap.min.css';
-@import 'pages/todo.css';
+@import 'pages/todo.scss';
 @import 'pages/multimedia.css';
 @import 'pages/newProject.css';
 @import 'pages/canvas.css';
+@import 'pages/homePage.css';
 
 
 
