--- a/app/templates/_pages/main.hbs
+++ b/app/templates/_pages/main.hbs
@@ -1,20 +1,30 @@
 {{!< default}}
 <div id="root">
-	<h1>Home Page</h1>
-	<nav>
-	 	<ul> 
-	 		<li>
-	 			<a href="/pages/todo.html">Todo App</a>
-	 		</li>
-	 		<li>
-	 			<a href="/pages/multimedia.html">Multimedia</a>
-	 		</li>
-	 		<li>
-	 			<a href="/pages/newProject.html">D3</a>
-	 		</li>
-	 		<li>
-	 			<a href="/pages/canvas.html">Canvas Example</a>
-	 		</li>
-	 	</ul>	
-	</nav>
+  <header>
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+          <img class="homeImage" src="/media/imgres.jpg">
+          <h1 class="navTitle">Home Page</h1>
+          <nav></nav>
+        </div>
+    </div>
+      <div class="row">
+        <div class="col-sm-7">
+        </div>
+        <div class="col-sm-3">
+          <div class="circle"></div>
+          <div class="circle1"></div>
+          <div class="circle2"></div>
+        </div>  
+        <div class="col-sm-2">
+          <p>Column 3 start</p>
+            <div class="text">
+            <h3>Stacking block elements</h3>
+            <h4>One Bite at a Time</h4>
+          </div>
+        </div>
+      </div>
+    </div>	
+  </header>
 </div>
