--- a/app/templates/_layouts/default.hbs
+++ b/app/templates/_layouts/default.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="description" content="">
-    <title>Boilerplate</title>
+    <title>BobbyChan</title>
     <link rel="shortcut icon" href="/images/touch/touch-icon-57x57.png">
     <link rel="stylesheet" type="text/css" href="/dist/app.css" />
     <script src="/dist/modernizr-custom.js"></script>
