--- a/app/templates/_pages/main.hbs
+++ b/app/templates/_pages/main.hbs
@@ -6,25 +6,33 @@
         <div class="col-sm-12">
           <img class="homeImage" src="/media/imgres.jpg">
           <h1 class="navTitle">Home Page</h1>
+          <h2 class="pageTitle"> BOBBY CHAN</h2>
+          <h2 class="pageTitleSub"> Design*Web Dev*Photography</h2>
           <nav></nav>
         </div>
     </div>
       <div class="row">
-        <div class="col-sm-7">
-        </div>
-        <div class="col-sm-3">
-          <div class="circle"></div>
-          <div class="circle1"></div>
-          <div class="circle2"></div>
-        </div>  
-        <div class="col-sm-2">
-          <p>Column 3 start</p>
-            <div class="text">
-            <h3>Stacking block elements</h3>
-            <h4>One Bite at a Time</h4>
-          </div>
-        </div>
+      <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC|Press+Start+2P|Cabin+Sketch" rel="stylesheet">
+        <div class="col-sm-3 block1"><h3 class="welcome1">Welcome</h3><h2 class="welcome2">I am Bobby Chan </h2><h2 class="welcome3"> and this is my online portfolio.</h2></div>
+        <div class="col-sm-3 block2"></div>
+        <div class="col-sm-3 block3"><h2 class="aboutMe1">About Me</h2><h2 class="aboutMe2">About Me</h2></div>  
+        <div class="col-sm-3 block4"></div>
+      </div>  
+       </div> 
+      <div class="row">
+        <div class="col-sm-3 block5"></div>
+        <div class="col-sm-3 block6"><img class="planeImage" src="/media/paperPlane.png"><h3 class="contactMe">Contact Me</h3></div>
+        <div class="col-sm-3 block7"></div>  
+        <div class="col-sm-3 block8"><img class="jsImage" src="/media/Js.png"><h3 class="codingText">.Coding</h3></div>
+      </div> 
+       <div class="row">
+        <div class="col-sm-3 block9"><img class="emblemImage" src="/media/emblem.png"><h3 class="designWork">Design</h3></div>
+        <div class="col-sm-3 block10"></div>
+        <div class="col-sm-3 block11"><img class="cameraImage" src="/media/camera.png"><h3 class="photographyText">Photography</h3></div>  
+        <div class="col-sm-3 block12"></div>
+      </div> 
       </div>
     </div>	
   </header>
 </div>
+
