added ajax/flickr page

--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -9,6 +9,7 @@
 @import 'pages/newProject.css';
 @import 'pages/canvas.css';
 @import 'pages/homePage.css';
+@import 'pages/photoSearch.scss';
 
 
 
