--- a/app/stylesheets/pages/homePage.css
+++ b/app/stylesheets/pages/homePage.css
@@ -8,16 +8,25 @@
 .homeImage{
 	width: 100%;
 	height: 1000px;
+	/*position: fixed; */
 }
+/* All navigation bar CSS*/
 nav {
 	position: absolute;
-	top: 550px;
-	left: 100px;
+	float: right;
+	top: 930px;
+	left: 450px;
+	font-family: "Cabin Sketch";
+	font-size: 2em;
 }
-.navTitle {
-	position: absolute;
-	top: 945px;
-	left: 100px;
+ul {
+	display: flex;
+	flex-wrap: wrap;
+	color: white;
+}
+li {
+		padding: 20px;
+/* All block elements*/
 }
 .block1 {
     min-height: 350px;
@@ -67,8 +76,7 @@ nav {
     min-height: 350px;
     background-color: #22201f;
 }
-
-
+/* resetting some default paddings & margins*/
 .col-sm-3 {
 	padding: 0;
 }
@@ -78,61 +86,12 @@ nav {
 .col-sm-12{
 	padding: 0;
 }
+/* Images */
 .planeImage {
 	position: absolute;
 	height: 125px;
 	top: 70px;
 	left: 155px;
-}
-.contactMe {
-	position: absolute;
-	top: 220px;
-	left: 135px;
-	color: #29A68B;
-	font-size: 4em;
-	font-family: "Patrick Hand SC";
-}
-.welcome1 {
-	font-family: "Patrick Hand SC";
-	color:	#262322;
-	font-size: 5em;
-	position: absolute;
-	top: 25px;
-	left: 30px;
-}
-.welcome2 {
-	font-family: "Patrick Hand SC";
-	color:	#262322;
-	font-size: 5em;
-	position: absolute;
-	top: 95px;
-	left: 30px;
-}
-.welcome3 {
-	font-family: "Patrick Hand SC";
-	color:	#262322;
-	font-size: 5em;
-	position: absolute;
-	top: 150px;
-	left: 30px;
-}
-.aboutMe2 {
-	font-family: "Patrick Hand SC";
-	color:	#262322;
-	font-size: 5.5em;
-	position: absolute;
-	top: 130px;
-	left: 110px;
-	font-style: oblique;
-}
-.aboutMe1 {
-	font-family: "Patrick Hand SC";
-	color:	#767a79;
-	font-size: 5.5em;
-	position: absolute;
-	top: 128px;
-	left: 108px;
-	font-style: oblique;
 }
 .cameraImage {
 	position: absolute;
@@ -140,6 +99,62 @@ nav {
 	top: 85px;
 	left: 140px;
 }
+.jsImage {
+	position: absolute;
+	height: 200px;
+	top: 65px;
+	left: 120px;
+}
+.emblemImage {
+	position: absolute;
+	height: 255px;
+	top: 45px;
+	left: 85px;
+}
+/* Text styles*/
+.contactMe {
+	position: absolute;
+	top: 220px;
+	left: 135px;
+	color: #29A68B;
+	font-size: 4em;
+	font-family: "Cabin Sketch";
+}
+.welcome1 {
+	font-family: "Cabin Sketch";
+	color:	#262322;
+	font-size: 5em;
+	position: absolute;
+	top: 25px;
+	left: 30px;
+}
+.welcome2 {
+	font-family: "Cabin Sketch";
+	color:	#262322;
+	font-size: 5em;
+	position: absolute;
+	top: 95px;
+	left: 30px;
+}
+.welcome3 {
+	font-family: "Cabin Sketch";
+	color:	#262322;
+	font-size: 5em;
+	position: absolute;
+	top: 150px;
+	left: 30px;
+}
+
+.aboutMe1 {
+	font-family: "Cedarville Cursive";
+	color:	white;
+	font-size: 5em;
+	position: absolute;
+	top: 140px;
+	left: 88px;
+	font-style: oblique;
+}
+
 .photographyText {
 	position: absolute;
 	top: 210px;
@@ -155,18 +170,6 @@ nav {
 	color: #29A68B;
 	font-size: 2.75em;
 	font-family: "helvetica";
-}
-.emblemImage {
-	position: absolute;
-	height: 255px;
-	top: 45px;
-	left: 85px;
-}
-.jsImage {
-	position: absolute;
-	height: 200px;
-	top: 65px;
-	left: 120px;
 }
 .codingText {
 	position: absolute;
@@ -192,3 +195,92 @@ nav {
 	font-size: 4em;
 	font-family: "Cabin Sketch";
 }
+/* Animation below this line */
+.codingText {
+    display: inline-block;
+    position: relative;
+    padding-bottom: 3px;
+}
+.codingText:after {
+    content: '';
+    display: block;
+    margin: auto;
+    height: 3px;
+    width: 0px;
+    background: transparent;
+    transition: width .5s ease, background-color .5s ease;
+}
+.codingText:hover:after {
+    width: 100%;
+    background: black;
+}
+.aboutMe1 {
+    display: inline-block;
+    position: relative;
+    padding-bottom: 3px;
+}
+.aboutMe1:after {
+    content: '';
+    display: block;
+    margin: auto;
+    height: 3px;
+    width: 0px;
+    background: transparent;
+    transition: width .5s ease, background-color .5s ease;
+}
+.aboutMe1:hover:after {
+    width: 100%;
+    background: white;
+}
+.contactMe {
+    display: inline-block;
+    position: relative;
+    padding-bottom: 3px;
+}
+.contactMe:after {
+    content: '';
+    display: block;
+    margin: auto;
+    height: 3px;
+    width: 0px;
+    background: transparent;
+    transition: width .5s ease, background-color .5s ease;
+}
+.contactMe:hover:after {
+    width: 100%;
+    background: #29A68B;
+}
+.designWork{
+    display: inline-block;
+    position: relative;
+    padding-bottom: 3px;
+}
+.designWork:after {
+    content: '';
+    display: block;
+    margin: auto;
+    height: 3px;
+    width: 0px;
+    background: transparent;
+    transition: width .5s ease, background-color .5s ease;
+}
+.designWork:hover:after {
+    width: 100%;
+    background: #29A68B;
+}
+
+.photographyText:after {
+    content: '';
+    display: block;
+    margin: auto;
+    height: 3px;
+    width: 0px;
+    background: transparent;
+    transition: width .5s ease, background-color .5s ease;
+}
+.photographyText:hover:after {
+    width: 100%;
+    background: black;
+}
+  
+
